test/testdata/functions/declaration/missing_2_args_error.lox
fun add(a, b) {
  print a + b;
}

add(); // error: add() missing 2 arguments: a and b
